Fri Nov 26 23:00:42 GMT 2004 (njh)
----------------------------------
 * libclamav/mbox.c:	Scan binHexes after the final MIME section
			Handle spaces incorrectly added to the final MIME
				section marker

Fri Nov 26 21:53:03 GMT 2004 (njh)
----------------------------------
 * libclamav/mbox.c:	Scan uuencodes after the final MIME section

Fri Nov 26 22:01:58 CET 2004 (tk)
---------------------------------
  * libclamav/scanners.c: cli_scanzip: apply cosmetic patch from Andrey J.
			  Melnikoff (TEMHOTA) <temnota*kmv.ru>

Fri Nov 26 21:07:19 CET 2004 (tk)
---------------------------------
  * libclamav/pe.c: do not trigger a warning on IMAGE_SUBSYSTEM_UNKNOWN

Thu Nov 25 18:38:06 CET 2004 (tk)
---------------------------------
  * clamd: new directives StreamMinPort and StreamMaxPort (allow port range
	   specification for stream mode). Patch by Alexander Marx
	   <mad-ml*madness.at>)

Tue Nov 23 23:23:45 CET 2004 (tk)
---------------------------------
  * clamscan: --move: preserve original access and modification times
	      (requested by Tomasz Papszun); optimise

Tue Nov 23 09:06:45 GMT 2004 (njh)
----------------------------------
  * libclamav/binhex.c:	Fix crash in base64 encoded binhex files reported by
				Stefan Kaltenbrunner <stefan*kaltenbrunner.cc>

Mon Nov 22 15:20:07 GMT 2004 (njh)
----------------------------------
  * libclamav:	General performance enhancements

Sat Nov 20 23:04:59 GMT 2004 (njh)
----------------------------------
  * clamav-milter:	Better parsing of clamd's reply

Sat Nov 20 13:18:58 GMT 2004 (njh)
----------------------------------
  * libclamav/untar.c:	Better handling of false file type identification

Fri Nov 19 11:34:56 GMT 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Scan email footers (portions after the last MIME
				boundary)

Thu Nov 18 20:28:13 CET 2004 (tk)
---------------------------------
  * libclamav: add support for Mac's HQX file format (patch by Nigel)

Thu Nov 18 11:03:14 CET 2004 (tk)